<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:gravity="bottom" >

    <TextView
        android:id="@+id/tvDetailConsumptionFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_layout_bottom"
        android:drawableLeft="@drawable/ic_cc_small"
        android:drawablePadding="@dimen/interimage_padding"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/button_cc"
        android:textAlignment="gravity"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_font_size" >
    </TextView>

    <LinearLayout
        android:id="@+id/llDetailMoneyFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDetailConsumptionFR"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/interimage_padding"
            android:gravity="center_horizontal"
            android:text="@string/money_sign"
            android:textAlignment="gravity"
            android:textColor="@color/money_font_orange"
            android:textSize="@dimen/money_font_size_big" >
        </TextView>

        <TextView
            android:id="@+id/tvDetailAmountFR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/money_hint"
            android:textAlignment="gravity"
            android:textColor="@color/money_font_orange"
            android:textSize="@dimen/money_font_size_big" >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btnCancelReaderFR"
        android:layout_width="@dimen/button_medium_width"
        android:layout_height="@dimen/button_medium_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_layout_bottom"
        android:background="@drawable/btn_rounded_no_padding"
        android:text="@string/button_cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_font_size" />

    <LinearLayout
        android:id="@+id/llLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnCancelReaderFR"
        android:layout_below="@id/llDetailMoneyFR"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/ivLogoFR"
            android:layout_width="@dimen/reader_logo_width"
            android:layout_height="@dimen/reader_logo_height"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_none"
            android:src="@drawable/ic_card" >
        </ImageView>
        
        <View android:layout_width="0dp" android:layout_height="@dimen/interimage_padding"/>

        <TextView
            android:id="@+id/txtDescriptionFR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/fragment_small_interitem_space"
            android:gravity="center"
            android:text="@string/title_reader"
            android:textSize="@dimen/money_font_size" >
        </TextView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".80"
            android:background="@android:color/black"
            android:contentDescription="@null" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@color/app_background"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/please_wait"
                android:textAlignment="gravity"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/money_font_size" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>